senpai/tests/cases/error/import_nonexistent_module.sen
import "nonexistent.sen"

fn main():
    print(1)
